project/toDo/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops-with-kubernetes-project
  name: todo-application-dep
spec:
  replicas: 4
  selector:
    matchLabels:
      app: todo-application
  template:
    metadata:
      labels:
        app: todo-application
    spec:
      containers:
        - name: todo-application-back
          image: PROJECT/BACKEND
          readinessProbe:
            initialDelaySeconds: 30 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 5050
          livenessProbe:
            initialDelaySeconds: 30 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 5050
        - name: todo-application-front
          image: PROJECT/FRONTEND
          readinessProbe:
            initialDelaySeconds: 30 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 8080
          livenessProbe:
            initialDelaySeconds: 30 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 8080
