project/toDo/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: devops-with-kubernetes-project
  name: todo-application-dep
spec:
  replicas: 4
  selector:
    matchLabels:
      app: todo-application
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: cpu-usage-watch
  template:
    metadata:
      labels:
        namespace: devops-with-kubernetes-project
        app: todo-application
    spec:
      containers:
        - name: todo-application-back
          image: muhakka/todo-application-back:latest
          readinessProbe:
            initialDelaySeconds: 30 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 5050
          livenessProbe:
            initialDelaySeconds: 30 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 5050
        - name: todo-application-front
          image: muhakka/todo-application-front:latest
          readinessProbe:
            initialDelaySeconds: 30 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 8080
          livenessProbe:
            initialDelaySeconds: 30 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 8080
