project/toDo/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devops-with-kubernetes-project
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-application-front-svc
            port: 
              number: 2345
      - path: /image
        pathType: Prefix
        backend:
          service:
            name: todo-application-back-svc
            port: 
              number: 2346
